@@ -81,6 +81,9 @@
 
 	Perform sorting of completion items after doing Unicode normalization.
 
+	Perform sorting of file names after doing Unicode normalization.  Thanks
+	to hacksenwerk.
+
 	Fixed line number column not including padding to the left of it.
 
 	Fixed local options not being loaded on Ctrl-W x.
